[package]
name = "exup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
flate2 = "1.0.26"
tar = "0.4.40"
tokio = { version = "1.30.0", features = ["full"] }
